force-app/main/default/objects/Contract_Renewal_Batch__c/Contract_Renewal_Batch__c.object-meta.xml
<CustomObject>
    <label>Contract Renewal Batch</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Batch ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contract Renewal Batches</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>