force-app/main/default/objects/Contract_Renewal_Batch__c/fields/CES_Office__c.field-meta.xml
<CustomField>
    <fullName>CES_Office__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CES Office</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>CES Location</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Contract Renewal Batches</relationshipLabel>
    <relationshipName>Contract_Renewal_Batches</relationshipName>
    <type>Lookup</type>
</CustomField>