force-app/main/default/objects/Contract_Renewal_Batch__c/fields/Contract_Ending_Date_to_Process__c.field-meta.xml
<CustomField>
    <fullName>Contract_Ending_Date_to_Process__c</fullName>
    <description>process contracts that end with this date</description>
    <inlineHelpText>process contracts that end with this date</inlineHelpText>
    <label>Contract Ending Date to Process</label>
    <type>Date</type>
</CustomField>