force-app/main/default/objects/Contract_Renewal_Batch__c/fields/Detail_Build_Inactivated__c.field-meta.xml
<CustomField>
    <fullName>Detail_Build_Inactivated__c</fullName>
    <formula>IF(ISPICKVAL(Status__c, &#39;Pending&#39;), false, 
IF(ISPICKVAL(Status__c, &#39;Has Errors&#39;), false,
IF(ISPICKVAL(Status__c, &#39;No Contracts to Process&#39;), false,
IF(ISPICKVAL(Status__c, &#39;Detail Build Completed Successfully&#39;), false,
IF(ISPICKVAL(Status__c, &#39;Detail Build Completed with Errors&#39;), false, true)))))</formula>
    <label>Detail Build Inactivated</label>
    <type>Checkbox</type>
</CustomField>