force-app/main/default/objects/Contract_Renewal_Batch__c/fields/Margin_Build_Inactivated__c.field-meta.xml
<CustomField>
    <fullName>Margin_Build_Inactivated__c</fullName>
    <formula>IF(ISPICKVAL(Status__c, &#39;Margin Build Completed with Errors&#39;), false, 
IF(ISPICKVAL(Status__c, &#39;Detail Build Completed Successfully&#39;), false, true))</formula>
    <label>Margin Build Inactivated</label>
    <type>Checkbox</type>
</CustomField>