force-app/main/default/objects/Contract_Renewal_Batch__c/fields/Margin_Records_Created__c.field-meta.xml
<CustomField>
    <fullName>Margin_Records_Created__c</fullName>
    <label>Margins Created</label>
    <summaryFilterItems>
        <field>Contract_Renewal_Batch_Detail__c.Margin_Record_Created__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Contract_Renewal_Batch_Detail__c.Contract_Renewal_Batch__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>