force-app/main/default/objects/Contract_Renewal_Batch__c/fields/Pending_Contract_Count__c.field-meta.xml
<CustomField>
    <fullName>Pending_Contract_Count__c</fullName>
    <label>Pending Contract Count</label>
    <summaryFilterItems>
        <field>Contract_Renewal_Batch_Detail__c.Status__c</field>
        <operation>equals</operation>
        <value>Pending</value>
    </summaryFilterItems>
    <summaryForeignKey>Contract_Renewal_Batch_Detail__c.Contract_Renewal_Batch__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>