force-app/main/default/objects/Contract_Renewal_Batch__c/fields/Rebuild_Batch__c.field-meta.xml
<CustomField>
    <fullName>Rebuild_Batch__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Re-build Batch</label>
    <type>Checkbox</type>
</CustomField>