force-app/main/default/objects/Contract_Renewal_Batch__c/fields/Remaining_Contracts_to_Process__c.field-meta.xml
<CustomField>
    <fullName>Remaining_Contracts_to_Process__c</fullName>
    <formula>Total_Contracts_to_Process__c - Processed_Contract_Count__c</formula>
    <label>Remaining Margins to Process</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>