force-app/main/default/objects/Contract_Renewal_Batch__c/fields/Remaining_Margins_to_Create__c.field-meta.xml
<CustomField>
    <fullName>Remaining_Margins_to_Create__c</fullName>
    <formula>Total_Contracts_to_Process__c - Margin_Records_Created__c</formula>
    <label>Remaining Margins to Create</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>