force-app/main/default/objects/Contract_Renewal_Batch__c/fields/Total_Contract_Count__c.field-meta.xml
<CustomField>
    <fullName>Total_Contract_Count__c</fullName>
    <label>Total Contract Count</label>
    <summaryForeignKey>Contract_Renewal_Batch_Detail__c.Contract_Renewal_Batch__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>