force-app/main/default/objects/Contract_Renewal_Batch__c/fields/Total_Contracts_to_Process__c.field-meta.xml
<CustomField>
    <fullName>Total_Contracts_to_Process__c</fullName>
    <formula>Pending_Contract_Count__c + Error_Contract_Count__c + Processed_Contract_Count__c</formula>
    <label>Total Contracts to Process</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>