force-app/main/default/objects/Contract_Renewal_Batch__c/fields/Total_Do_Not_Process_Contracts__c.field-meta.xml
<CustomField>
    <fullName>Total_Do_Not_Process_Contracts__c</fullName>
    <formula>Total_Contract_Count__c - Total_Contracts_to_Process__c</formula>
    <label>Total Do Not Process Contracts</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>